--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                 </div>
 
                 <div class="review_text">
-                    <h2 class="name">Aditya Kr. Mandal</h2>
+                    <h2 class="name">Mr. Josheph</h2>
 
                     <div class="review_icon">
                         <i class="fa-solid fa-star"></i>
@@ -564,7 +564,7 @@
                 </div>
 
                 <div class="review_text">
-                    <h2 class="name">Akhilendra Kumar</h2>
+                    <h2 class="name">Michel</h2>
 
                     <div class="review_icon">
                         <i class="fa-solid fa-star"></i>
@@ -601,7 +601,7 @@
                 </div>
 
                 <div class="review_text">
-                    <h2 class="name">Akash Kumar</h2>
+                    <h2 class="name">Trevor</h2>
 
                     <div class="review_icon">
                         <i class="fa-solid fa-star"></i>
@@ -638,7 +638,7 @@
                 </div>
 
                 <div class="review_text">
-                    <h2 class="name">Ajit Pal</h2>
+                    <h2 class="name">Franklin</h2>
 
                     <div class="review_icon">
                         <i class="fa-solid fa-star"></i>
@@ -758,7 +758,7 @@
                     <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
                     <div class="team_icon">
-                        <i class="fa-brands fa-facebook-f"><a href="https://www.facebook.com/aditya.evans.75?mibextid=ZbWKwL"></a></i>
+                        <i class="fa-brands fa-facebook-f"><a href=""></a></i>
                         <i class="fa-brands fa-twitter"></i>
                         <i class="fa-brands fa-instagram"></i>
                     </div>
@@ -832,10 +832,10 @@
 
             <div class="footer_tag">
                 <h2>Contact</h2>
-                <p>+91 7807336962</p>
-                <p>+91 9263139129</p>
-                <p>adityaevans13@gmail.com</p>
-                <p>adityak7@gmail.com</p>
+                <p>+91 9XXXX XXXXX</p>
+                <p>+91 9XXXX XXXXX</p>
+                <p>akshatj7591@gmail.com</p>
+                <p>akshatj7591@gmail.com</p>
             </div>
 
             <div class="footer_tag">
@@ -855,7 +855,7 @@
 
         </div>
 
-        <p class="end">Design by<span><i class="fa-solid fa-face-grin"></i>Aditya Kr. Mandal</span></p>
+        <p class="end">Design by<span><i class="fa-solid fa-face-grin"></i>Akshat Jain</span></p>
 
     </footer>
 
